# beat-stream-rs

./: .clippy.toml  .dockerignore  .editorconfig  .env.example  .gitignore  .rustfmt.toml  .taplo.toml  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PRD.md  deny.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  copilot-instructions.md  lsp.json
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/instructions/: changelog.instructions.md  git-commit.instructions.md  github-pullrequest.instructions.md
.github/prompts/: pr-review.prompt.md
.github/workflows/: ci.yml  deploy.yml
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs  room.rs  ws.rs
crates/server/tests/: integration.rs  ws_integration.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
docs/adr/: 0000-bicep-over-terraform.md
docs/testing/: phase1-test-plan.md
infra/: README.md  main.bicep  main.bicepparam
infra/modules/: acr.bicep  budget.bicep  container-apps.bicep  cosmos-db.bicep  identity.bicep  key-vault.bicep  monitoring.bicep
