[package]
name = "beat-stream-server"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "beat-stream-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
azure_identity = { workspace = true }
azure_data_cosmos = { workspace = true }
azure_security_keyvault_secrets = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
beat-stream-shared = { workspace = true }

[features]
integration = []
