[package]
name = "beat-stream-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "beat-stream-server"
path = "src/main.rs"

[lib]
name = "beat_stream_server"
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
beat-stream-shared = { workspace = true }

# Phase 2 (Cosmos DB / Key Vault) — not yet needed
# azure_identity = { workspace = true }
# azure_data_cosmos = { workspace = true }
# azure_security_keyvault_secrets = { workspace = true }

[dev-dependencies]
tokio-tungstenite = "0.26"
futures-util = "0.3"

[features]
integration = []
